# Initial-Project

./: .env.example  .gitignore  Dockerfile  README.md  VPS_DEPLOYMENT.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  run_app.py
.claude/: settings.local.json
.github/workflow/: test.yml
.github/workflows/: main.yml
api/: Dockerfile  api.py  requirements.txt
mlflow_data/: mlflow.db
notebooks/: Model.ipynb
util/: scrape_image.py
website/: Dockerfile  README.md  app.py  requirements.txt  test_responsive.py
website/.streamlit/: config.toml
