[project]
name = "initial-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
    "streamlit-option-menu>=0.4.0",
    "uvicorn>=0.35.0",
]
